Trying to Fix Vertical Overflow

--- a/source/main.css
+++ b/source/main.css
@@ -1,6 +1,6 @@
 body {
   overflow: hidden;
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 100%;
 }
